--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,9 @@
     "axios": "^1.7.3",
     "react": "16.8",
     "react-dom": "16.8",
+    "react-redux": "^7.2.8",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.3.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
