--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,10 @@
     "react": "16.8",
     "react-dom": "16.8",
     "react-redux": "^7.2.8",
+    "react-router-dom": "^5.1.0",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.3.0",
-    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
