--- a/client/src/jsconfig.json
+++ b/client/src/jsconfig.json
@@ -1,7 +1,8 @@
+// jsconfig.json
 {
     "compilerOptions": {
-        "baseUrl": "."
+      "baseUrl": ".",
     },
     "include": ["./src"],
-   "exclude": ["node_modules", "**/node_modules/*"]
+    "exclude": ["node_modules", "build", "coverage", "dist", "lib"]
 }
