--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Your app description",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
     "test": "mocha --timeout 10000"
   },
   "dependencies": {
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "chai": "^5.1.1",
+    "cross-env": "^7.0.3",
     "esm": "^3.2.25",
     "mocha": "^10.7.0",
     "nodemon": "^3.1.4",
