--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "dependencies": {
     "axios": "^1.7.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "16.8",
     "react-dom": "16.8",
     "react-redux": "^7.2.8",
